<resources>
    <string name="app_name">Ej2_NumberSorting_APVG</string>
    <string name="title_label">Ordenamiento de números</string>
    <string name="hintArray">Ingresa números</string>
    <string name="submitNum">Enviar</string>
    <string name="showResBttn">Resultado</string>
    <string name="clrArr">Borra Arreglo</string>
    <string name="numberLimit">Sólo puedes ingresar 20 números</string>
    <string name="introduceContinue">Tienes que ingresar un número para continuar</string>
    <string name="arrayIsEmpty">El arreglo a ordenar está vacío</string>
    <string name="clearedArray">Arreglo borrado</string>
    <string name="origArray">Arreglo original:</string>
    <string name="sortedArray">Arreglo ordenado:</string>
</resources>
